--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,10 @@
        Deny from all
     </Files>
 
-   
+    <Files laravel.log>
+       Order allow,deny
+       Deny from all
+    </Files>
 
     RewriteEngine On
 
